src/app/pages/home/contact/contact.module.scss
@use '@styles/mixins' as *;

.contact {
  @include flex(center, center, true);
  grid-column   : 2;

  h2 {
    color       : var(--hc-primary-400);
  }

  p {
    max-width   : 80%;
    text-align  : center;
  }

  .contactIcons {
    @include flex(center, start, false, 40px);
    width       : 100%;
    margin-top  : 40px;
    
    a {
      @include flex(center, center);
      color     : var(--hc-text-strong);
    }

    img {
      width     : 48px;
    }
  }

  .contactAddress {
    @include flex(center, center, true);
    width       : 100%;
    margin-top  : 40px;

    p {
      @include flex(center, center, false, 8px);
    }
  }
}

